fix: fixed sonarqube code smell suggestions